tests/errors/other/test_tc_other_05_comparison_type.pc
#import std.io;
int main() {
    for i in 0..5 {
        if i == "hello" {
            io.println("found");
        }
    }
    return 0;
}
